Corrected container structure for desired layout, added flex-wrap to the correct container this time

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,6 +8,9 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  text-align: left;
 }
 
 .footer {
@@ -18,18 +21,23 @@ body {
 
 .sidebar {
   width: 300px;
+  height: 80vh;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  display: flex;
+  max-height: 150px;
+  flex-wrap: 150px 150px;
+  /* dont forget to specify wrap limit */
 }
 
-.cardgrid {
+.grail {
   display: flex;
-  flex-wrap: wrap;
-
+  flex-direction: row;
 }
